opam-version: "2.0"
maintainer: "Etienne Millon <me@emillon.org>"
authors: "Etienne Millon <me@emillon.org>"
license: "BSD-2"
homepage: "https://github.com/emillon/ocaml-catapult"
doc: "https://emillon.github.io/ocaml-catapult/doc"
bug-reports: "https://github.com/emillon/ocaml-catapult/issues"
depends: [
  "ocaml"
  "dune" {build & >= "1.3.0"}
  "alcotest" {with-test}
  "mtime"
  "ppx_deriving"
  "ppx_deriving_yojson"
]
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
dev-repo: "git+https://github.com/emillon/ocaml-catapult.git"
synopsis: "Emit Catapult traces, compatible with chrome://tracing"
description: """
Emitter for the tracing format used by Catapult's trace-viewer. This tracing
format is most notably used in chrome://tracing.
"""
